--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "leaflet": "^1.9.4",
     "lucide-react": "^0.563.0",
+    "mqtt": "^5.15.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
