--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.563.0",
     "mqtt": "^5.15.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
