--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tensorflow-models/mobilenet": "^2.1.1",
+    "@tensorflow/tfjs": "^4.22.0",
     "clsx": "^2.1.1",
+    "dexie": "^4.3.0",
     "framer-motion": "^12.34.2",
     "jspdf": "^4.1.0",
     "jspdf-autotable": "^5.0.7",
@@ -22,7 +25,8 @@
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
     "recharts": "^3.7.0",
-    "tailwind-merge": "^3.4.1"
+    "tailwind-merge": "^3.4.1",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
